AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I .

bin_PROGRAMS = pong
pong_SOURCES = \
Ball.cxx \
GameState.cxx \
Paddle.cxx \
PongController.cxx \
PongRenderer.cxx \
PongScene.cxx

AM_CPPFLAGS = $(DEPS_CFLAGS) $(BOOST_CPPFLAGS) $(GCOV_CFLAGS) $(V3D_CPPFLAGS)
AM_LDFLAGS = $(GCOV_LDFLAGS) \
$(BOOST_SIGNALS_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)

pong_LDADD = $(DEPS_LIBS) \
 $(BOOST_SIGNALS_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) \
$(libpng_LIBS) $(JPEG_LIBS) $(liblog4cxx_LIBS)
